Format code using spotless:apply